# AgentVault

./: .gitignore  404.html  CHANGELOG.md  RELEASE_1.0.0.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
poc_agents/dynamics_pipeline/account_analyzer_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/dynamics_pipeline/account_analyzer_agent/src/: __init__.py
poc_agents/dynamics_pipeline/account_analyzer_agent/src/account_analyzer_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/dynamics_pipeline/dynamics-task-creator-agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/dynamics_pipeline/dynamics-task-creator-agent/src/dynamics_task_creator_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/dynamics_pipeline/dynamics_data_fetcher_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/dynamics_pipeline/dynamics_data_fetcher_agent/src/: __init__.py
poc_agents/dynamics_pipeline/dynamics_data_fetcher_agent/src/dynamics_data_fetcher_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/dynamics_pipeline/dynamics_pipeline_orchestrator/: Dockerfile  dynamics_config.json  dynamics_config_fixed.json  entrypoint.sh  pyproject.toml
poc_agents/dynamics_pipeline/dynamics_pipeline_orchestrator/src/: __init__.py
poc_agents/dynamics_pipeline/dynamics_pipeline_orchestrator/src/dynamics_orchestrator/: __init__.py  a2a_client_wrapper.py  graph.py  models.py  nodes.py  run.py  state_definition.py
poc_agents/dynamics_pipeline/teams-notifier-agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/dynamics_pipeline/teams-notifier-agent/src/teams_notifier_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/ecommerce_pipeline/ecommerce_pipeline_orchestrator/: Dockerfile  ecommerce_config.json  entrypoint.sh  pyproject.toml
poc_agents/ecommerce_pipeline/ecommerce_pipeline_orchestrator/src/ecommerce_orchestrator/: __init__.py  a2a_client_wrapper.py  entrypoint.sh  graph.py  local_storage_utils.py  models.py  nodes.py  run.py  state.py  state_definition.py  wrapper.py
poc_agents/ecommerce_pipeline/ecommerce_product_catalog_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/ecommerce_pipeline/ecommerce_product_catalog_agent/src/ecommerce_product_catalog_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/ecommerce_pipeline/ecommerce_recommendation_engine_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/ecommerce_pipeline/ecommerce_recommendation_engine_agent/src/ecommerce_recommendation_engine_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/ecommerce_pipeline/ecommerce_trend_analysis_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/ecommerce_pipeline/ecommerce_trend_analysis_agent/src/ecommerce_trend_analysis_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/ecommerce_pipeline/ecommerce_user_profile_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/ecommerce_pipeline/ecommerce_user_profile_agent/src/ecommerce_user_profile_agent/: __init__.py  agent.py  main.py  models.py
poc_agents/etl_pipeline/data_extractor_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/etl_pipeline/data_extractor_agent/src/: __init__.py
poc_agents/etl_pipeline/data_loader_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/etl_pipeline/data_loader_agent/src/: __init__.py
poc_agents/etl_pipeline/data_transformer_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/etl_pipeline/data_transformer_agent/src/: __init__.py
poc_agents/etl_pipeline/etl_pipeline_orchestrator/: Dockerfile  entrypoint.sh  etl_config.json  pyproject.toml
poc_agents/etl_pipeline/etl_pipeline_orchestrator/src/: __init__.py
poc_agents/langgraph_scrapepipe/: CONFIGURATION.md  README.md  SSE_STREAMING.md  clean_fallbacks_off.json  config_generator.py  direct_scraper.py  direct_scraper_working.py  fixed_test2_config.json  pyproject.toml  run_pipeline.py  working_config.json
poc_agents/langgraph_scrapepipe/config/: __init__.py
poc_agents/langgraph_scrapepipe/src/langgraph_research_orchestrator/: __init__.py  a2a_client_wrapper.py  config.py  graph.py  local_storage_utils.py  nodes.py  run.py  s3_utils.py  state.py
poc_agents/langgraph_scrapepipe/tests/: __init__.py
poc_agents/mcp_test_pipeline/custom-filesystem-mcp/: Dockerfile  Dockerfile.simple  entrypoint.sh  index.ts  package.json  pyproject.toml  requirements.txt  run.py  server.js  simple-dockerfile  start-server.sh  tsconfig.json
poc_agents/mcp_test_pipeline/mcp_test_orchestrator/: Dockerfile  entrypoint.sh  mcp_test_config.json  pyproject.toml
poc_agents/mcp_test_pipeline/mcp_test_orchestrator/src/: __init__.py
poc_agents/secops_pipeline/mcp-tool-proxy-agent/: Dockerfile  agent-card.json  env.local  pyproject.toml
poc_agents/secops_pipeline/secops_enrichment_agent/: Dockerfile  agent-card.json  docker-entrypoint.sh  manual_enrich.py  pyproject.toml  run_enrichment_fix.py
poc_agents/secops_pipeline/secops_investigation_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/secops_pipeline/secops_orchestrator/: Dockerfile  ensure_pipeline.py  entrypoint.sh  pyproject.toml  secops_pipeline_config.json
poc_agents/secops_pipeline/secops_response_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/support_pipeline/customer_history_agent/: Dockerfile  agent-card.json  mock_customer_data.json  pyproject.toml
poc_agents/support_pipeline/customer_history_agent/src/: __init__.py
poc_agents/support_pipeline/response_suggester_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/support_pipeline/response_suggester_agent/src/: __init__.py
poc_agents/support_pipeline/support_pipeline_orchestrator/: Dockerfile  entrypoint.sh  pyproject.toml  support_config.json
poc_agents/support_pipeline/support_pipeline_orchestrator/src/: __init__.py
poc_agents/support_pipeline/ticket_analyzer_agent/: Dockerfile  agent-card.json  pyproject.toml
poc_agents/support_pipeline/ticket_analyzer_agent/src/: __init__.py
(+449 files in other folders)
