[tool.poetry]
name = "langgraph-research-orchestrator"
version = "0.1.0"
description = "Orchestrator for the multi-agent research pipeline using LangGraph."
authors = ["AgentVault Dev Team <AgentVault@proton.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "langgraph_research_orchestrator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12" # Aligning with existing components

# LangChain & LangGraph
langgraph = "^0.1.1"
langchain = "^0.2.11"
langchain-core = "^0.2.23"
langchain-community = "^0.2.10"

# AgentVault (Local Path Dependency)
agentvault = {path = "../../agentvault_library", develop = true}

# Communication & Data Handling
httpx = {version = ">=0.26.0,<0.27.0", extras = ["http2", "brotli"]}
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"

# Database (for potential state/metadata)
asyncpg = "^0.29.0"
sqlalchemy = {version = "^2.0.31", extras = ["asyncio"]}
psycopg2-binary = "^2.9.9"

# Cloud Storage (for artifacts) - Keep boto3 for now, might switch to pure local later
boto3 = "^1.34.149"

# Resilience
tenacity = "^8.2.3"

# --- REMOVED Crawler Specific Dependencies ---
# duckduckgo-search = "^6.1.8"
# playwright = "^1.45.0"
# beautifulsoup4 = "^4.12.3"
# lxml = "^5.2.2"
# --- END REMOVED ---


# Observability (Optional - Add later)
# opentelemetry-api = "^1.24.0"
# opentelemetry-sdk = "^1.24.0"
# opentelemetry-exporter-otlp = "^1.24.0"
# langsmith = "^0.1.88" # For LangSmith integration

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
