[tool.poetry]
name = "account-analyzer-agent"
version = "0.1.0"
description = "Analyzes combined Dynamics and external data for account health."
authors = ["AgentVault Dynamics Demo Team <agentvault@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "account_analyzer_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
agentvault-server-sdk = {path = "../../../agentvault_server_sdk", develop = true}
pydantic = "^2.7.1"
python-dotenv = "^1.0.0"
httpx = ">=0.26.0,<0.27.0" # Add if using LLM option

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
