[tool.poetry]
name = "ecommerce-trend-analysis-agent"
version = "0.1.0"
description = "Identifies trending products or categories."
authors = ["AgentVault E-commerce Demo Team <agentvault@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ecommerce_trend_analysis_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
agentvault-server-sdk = {path = "../../../agentvault_server_sdk", develop = true}
httpx = "*" # For potential external API calls
python-dotenv = "^1.0.0"
# Add data analysis libraries if needed:
# pandas = "^2.0"
# scikit-learn = "^1.3"

# Base agent dependency (assuming it's not packaged separately)

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
