[tool.poetry]
name = "data-transformer-agent"
version = "0.1.0"
description = "Transforms raw data artifact fetched from DB."
authors = ["AgentVault ETL Demo Team <agentvault@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "data_transformer_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
agentvault-server-sdk = {path = "../../../agentvault_server_sdk", develop = true}
pydantic = "^2.7.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0" # REQ-ETL-TRN-004
httpx = "^0.27.0" # For LLM API calls

# Base agent dependency (handled by Dockerfile copy)

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"
pytest-asyncpg = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
