[tool.poetry]
name = "custom-filesystem-mcp"
version = "0.1.0"
description = "Custom MCP server for filesystem operations using Python/FastAPI."
authors = ["AgentVault Test Team <agentvault@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
python-dotenv = "^1.0.0" # For reading .env if needed locally

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Add optional setuptools configuration for pip install -e .
[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py"]

# Specify entry points if needed
[project.scripts]
run-custom-fs-mcp = "src.run:main"
