[tool.poetry]
name = "secops-mcp-tool-proxy-agent"
version = "0.1.0"
description = "Proxies AgentVault A2A requests to MCP tool servers for SecOps pipeline."
authors = ["SecOps Team <secops@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mcp_tool_proxy_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
agentvault-server-sdk = {path = "../../../agentvault_server_sdk", develop = true}
pydantic = "^2.7.1"
python-dotenv = "^1.0.0"
httpx = ">=0.26.0,<0.27.0" # Needed to call downstream MCP servers

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
