[tool.poetry]
name = "secops-enrichment-agent"
version = "0.1.0"
description = "AgentVault SecOps Agent: Enriches alerts with external threat intelligence."
authors = ["AgentVault A-Team <agentvault@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "secops_enrichment_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Path relative to this pyproject.toml when it's at /app/pyproject.toml
# and the library is at /app/agentvault_library
agentvault = {path = "./agentvault_library", develop = true}
agentvault-server-sdk = {path = "./agentvault_server_sdk", develop = true}

httpx = {version = ">=0.26.0,<0.27.0"}
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["secops_enrichment_agent"]
package_dir = {"" = "src"}
