[tool.poetry]
name = "customer-history-agent"
version = "0.1.0"
description = "Retrieves customer status and interaction summary."
authors = ["AgentVault Support Demo Team <agentvault@example.com>"]
license = "Apache-2.0"
readme = "README.md" # Assuming a README will be added later
packages = [{include = "customer_history_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
# Path dependency for the SDK relative to this pyproject.toml file
agentvault-server-sdk = {path = "../../../agentvault_server_sdk", develop = true}
pydantic = "^2.7.1" # Match orchestrator
python-dotenv = "^1.0.0"
# Add CRM client libraries here if implementing real integration (e.g., salesforce-api-client)

# Base agent dependency (handled by Dockerfile copy)

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
